<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:padding="8dip">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:text="@string/camera_running_title"
            android:typeface="monospace"
            android:textColor="@color/white"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:text="@string/camera_running_text"
            android:textColor="@color/white"
        />
    
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/close_camera_text"
            android:typeface="monospace"
            android:textColor="@color/light_red"
        />-->
    
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
            
            <Button
                android:id="@+id/camera_close_got_it"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/got_it"
                android:textColor="@color/white"
            />
            
            <!--<Button
                android:id="@+id/camera_close_yes"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/white"
            />

            <Button
                android:id="@+id/camera_close_no"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/no"
                android:layout_toRightOf="@id/camera_close_yes"
                android:textColor="@color/white"
            />-->
        </RelativeLayout>
        
    </LinearLayout>
    
</ScrollView>
